--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <li>Team</li>
       </ul>
     </nav>
+    <style type="text/css">
+      .colorIt {
+        border: 2px solid red;
+      }
+    </style>
   </header>
   <main>
     <section id="topMain">
@@ -22,7 +27,8 @@
         <div id="kittyOne"></div>
         <div id="kittyTwo"></div>
       </div>
-      <button>Vote!</button>
+      <button id='vote'>Vote!</button>
+      <button id='again'>Vote Again!</button>
     </section>
   </main>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js'>
